# viber-router

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  biome.json  justfile  package-lock.json  package.json  quasar.config.ts  vitest.config.ts
viber-router-api/: .env.example  Cargo.toml
viber-router-api/migrations/: 004_dynamic_server_keys.sql  005_create_proxy_logs.sql  007_ttft.sql  008_count_tokens_default_server.sql  010_add_is_enabled_to_group_servers.sql  015_add_group_key_id_to_ttft_logs.sql  016_create_models_and_allowed_models.sql  017_add_model_pricing_columns.sql  018_add_group_server_rate_columns.sql  019_alter_model_pricing_to_float8.sql  020_create_subscription_plans.sql  021_create_key_subscriptions.sql  022_add_cost_usd_subscription_id_to_token_usage_logs.sql  023_drop_monthly_limits_from_group_keys.sql  024_add_rate_limit_to_group_servers.sql  026_add_rpm_limit.sql  028_add_server_password.sql  029_add_system_prompt_to_servers.sql  031_add_max_input_tokens.sql  032_add_supported_models_to_group_servers.sql  033_add_model_request_costs.sql  034_update_sub_type_check_constraints.sql  038_create_group_user_agents.sql  040_group_servers_retry.sql  042_add_bonus_subscription_columns.sql  043_add_bonus_allowed_models.sql  044_add_tpm_limit.sql  045_add_weekly_cost_limit_timezone.sql  046_create_user_endpoints.sql  047_add_request_model_to_uptime_checks.sql  048_add_remove_thinking_to_servers.sql  049_add_sort_order_to_key_subscriptions.sql  050_add_custom_headers_to_servers.sql  052_add_bonus_custom_headers.sql  (+9 more)
(+469 files in other folders)
