[package]
name = "viber-router-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
deadpool-redis = "0.23"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
